parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Seen_Program Declaration Function Main Seen_Program_End
Rule 2     Main -> MAIN Push_Scope Seen_Main LPAREN RPAREN FBlock
Rule 3     Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration
Rule 4     Declaration -> empty
Rule 5     Array -> LBRACKET ICONST RBRACKET
Rule 6     Array -> empty
Rule 7     Function -> Function1
Rule 8     Function -> RFunction
Rule 9     Function -> empty
Rule 10    Function1 -> VOID ID Push_Scope LPAREN ParamList RPAREN Seen_Function FBlock Seen_Function_End Pop_Scope Function
Rule 11    RFunction -> Primitive ID Push_Scope LPAREN ParamList RPAREN Seen_Function RFBlock Seen_Function_End Pop_Scope Function
Rule 12    Block -> LBRACE Instruction RBRACE
Rule 13    FBlock -> LBRACE Declaration Instruction RBRACE
Rule 14    RFBlock -> LBRACE Declaration Instruction RETURN SuperExpr SEMI RBRACE
Rule 15    Conditional -> IF LPAREN SuperExpr RPAREN Push_Label_Stack Block Else
Rule 16    Push_Label_Stack -> <empty>
Rule 17    Pop_Label_Stack -> <empty>
Rule 18    Else -> ELSE Push_Else Pop_Label_Stack Block Pop_Label_Stack
Rule 19    Else -> Pop_Label_Stack empty
Rule 20    Push_Else -> <empty>
Rule 21    SuperExpr -> Expression Gen_Quad4 SuperExpr1
Rule 22    SuperExpr1 -> AND Seen_Operator SuperExpr
Rule 23    SuperExpr1 -> OR Seen_Operator SuperExpr
Rule 24    SuperExpr1 -> empty
Rule 25    Expression -> Expr Expression1 Gen_Quad3
Rule 26    Expression1 -> LESSTHAN Seen_Operator Expr
Rule 27    Expression1 -> GREATHAN Seen_Operator Expr
Rule 28    Expression1 -> DIFFERENT Seen_Operator Expr
Rule 29    Expression1 -> TWOEQUAL Seen_Operator Expr
Rule 30    Expression1 -> GREATEQUAL Seen_Operator Expr
Rule 31    Expression1 -> LESSEQUAL Seen_Operator Expr
Rule 32    Expression1 -> empty
Rule 33    Expr -> Term Gen_Quad2 Expr1
Rule 34    Expr1 -> MINUS Seen_Operator Expr
Rule 35    Expr1 -> PLUS Seen_Operator Expr
Rule 36    Expr1 -> empty
Rule 37    Term -> Factor Gen_Quad1 Term1
Rule 38    Term1 -> DIVIDE Seen_Operator Term
Rule 39    Term1 -> TIMES Seen_Operator Term
Rule 40    Term1 -> empty
Rule 41    Factor -> LPAREN Push_Expr SuperExpr RPAREN Pop_Expr
Rule 42    Factor -> Factor1 Seen_Operand
Rule 43    Factor1 -> Factor2
Rule 44    Factor1 -> Factor3
Rule 45    Factor2 -> MINUS Factor3 Gen_Quad0
Rule 46    Factor2 -> PLUS Factor3 Gen_Quad0
Rule 47    Factor3 -> Constant
Rule 48    Factor3 -> Call
Rule 49    Params -> Params1
Rule 50    Params -> empty
Rule 51    Params1 -> SuperExpr Seen_Param_Call Params2
Rule 52    Params2 -> COMMA Params1
Rule 53    Params2 -> empty
Rule 54    Params3 -> SuperExpr Seen_Param_Print Params4
Rule 55    Params3 -> STRING Seen_Param_Print Params4
Rule 56    Params4 -> COMMA Params3
Rule 57    Params4 -> empty
Rule 58    Push_Param_List -> <empty>
Rule 59    Loop -> LOOP LPAREN Save_Label SuperExpr RPAREN Push_Label_Stack Block Go_Back_To_Validate Pop_Label_Stack
Rule 60    Save_Label -> <empty>
Rule 61    Go_Back_To_Validate -> <empty>
Rule 62    Assign -> ID Seen_Operand EQUAL Seen_Operator Assign1
Rule 63    Assign1 -> SuperExpr Gen_Quad5
Rule 64    Assign1 -> Call
Rule 65    Assign1 -> STRING Check_Char Seen_Char_Operand Gen_Quad5
Rule 66    Check_Char -> <empty>
Rule 67    Call -> ID LPAREN Seen_Call Params RPAREN Check_Signature Seen_Call_End
Rule 68    Read -> READ LPAREN Type COMMA ID Generate_Read RPAREN
Rule 69    Generate_Read -> <empty>
Rule 70    Type -> Primitive
Rule 71    Type -> STRING
Rule 72    Print -> PRINT LPAREN Params3 RPAREN
Rule 73    Brush -> BRUSH LPAREN Color COMMA SuperExpr RPAREN
Rule 74    Color -> COLOR LPAREN SuperExpr COMMA SuperExpr COMMA SuperExpr RPAREN
Rule 75    PenDown -> PD LPAREN RPAREN
Rule 76    PenUp -> PU LPAREN RPAREN
Rule 77    Home -> HOME LPAREN RPAREN
Rule 78    Forward -> FD LPAREN SuperExpr RPAREN
Rule 79    Rotate -> RT LPAREN SuperExpr RPAREN
Rule 80    Circle -> CIRCLE LPAREN SuperExpr RPAREN
Rule 81    Arc -> ARC LPAREN SuperExpr COMMA SuperExpr RPAREN
Rule 82    Square -> SQUARE LPAREN SuperExpr RPAREN
Rule 83    Param -> Primitive ID Array1 Array1 Seen_Variable Update_Signature_Size
Rule 84    Array1 -> LBRACKET RBRACKET
Rule 85    Array1 -> empty
Rule 86    Primitive -> INT
Rule 87    Primitive -> FLOAT
Rule 88    Primitive -> BOOL
Rule 89    Primitive -> CHAR
Rule 90    ParamList -> ParamList1
Rule 91    ParamList -> empty
Rule 92    ParamList1 -> Param ParamList2
Rule 93    ParamList2 -> COMMA ParamList1
Rule 94    ParamList2 -> empty
Rule 95    Instruction -> Instruction1 SEMI Seen_Semi Instruction
Rule 96    Instruction -> empty
Rule 97    Instruction1 -> Loop
Rule 98    Instruction1 -> Conditional
Rule 99    Instruction1 -> Assign
Rule 100   Instruction1 -> Call
Rule 101   Instruction1 -> Brush
Rule 102   Instruction1 -> Read
Rule 103   Instruction1 -> Print
Rule 104   Instruction1 -> PenDown
Rule 105   Instruction1 -> PenUp
Rule 106   Instruction1 -> Home
Rule 107   Instruction1 -> Forward
Rule 108   Instruction1 -> Rotate
Rule 109   Instruction1 -> Color
Rule 110   Instruction1 -> Circle
Rule 111   Instruction1 -> Arc
Rule 112   Instruction1 -> Square
Rule 113   Constant -> ID
Rule 114   Constant -> FCONST Seen_Float
Rule 115   Constant -> ICONST Seen_Int
Rule 116   Constant -> CCONST Seen_Char
Rule 117   Constant -> FALSE
Rule 118   Constant -> TRUE
Rule 119   Seen_Char_Operand -> <empty>
Rule 120   Seen_Call -> <empty>
Rule 121   Seen_Call_End -> <empty>
Rule 122   Seen_Param_Call -> <empty>
Rule 123   Seen_Param_Print -> <empty>
Rule 124   Seen_Function -> <empty>
Rule 125   Seen_Function_End -> <empty>
Rule 126   Seen_Program -> <empty>
Rule 127   Seen_Program_End -> <empty>
Rule 128   Seen_Main -> <empty>
Rule 129   Update_Signature_Size -> <empty>
Rule 130   Check_Signature -> <empty>
Rule 131   Seen_Operand -> <empty>
Rule 132   Seen_Operator -> <empty>
Rule 133   Push_Expr -> <empty>
Rule 134   Pop_Expr -> <empty>
Rule 135   Gen_Quad0 -> <empty>
Rule 136   Gen_Quad1 -> <empty>
Rule 137   Gen_Quad2 -> <empty>
Rule 138   Gen_Quad3 -> <empty>
Rule 139   Gen_Quad4 -> <empty>
Rule 140   Gen_Quad5 -> <empty>
Rule 141   Seen_Variable -> <empty>
Rule 142   Seen_Float -> <empty>
Rule 143   Seen_Int -> <empty>
Rule 144   Seen_Char -> <empty>
Rule 145   Seen_Semi -> <empty>
Rule 146   Push_Scope -> <empty>
Rule 147   Pop_Scope -> <empty>
Rule 148   empty -> <empty>
Rule 149   Program -> ASCII Program
Rule 150   Block -> LBRACE error RBRACE
Rule 151   FBlock -> LBRACE Declaration error RBRACE
Rule 152   RFBlock -> LBRACE Declaration error RETURN SuperExpr SEMI RBRACE
Rule 153   Circle -> CIRCLE LPAREN error RPAREN
Rule 154   SuperExpr -> Expression error SuperExpr1
Rule 155   Term1 -> DIVIDE error Term
Rule 156   Term1 -> TIMES error Term

Terminals, with rules where they appear

AND                  : 22
ARC                  : 81
ASCII                : 149
BOOL                 : 88
BRUSH                : 73
CCONST               : 116
CHAR                 : 89
CIRCLE               : 80 153
COLOR                : 74
COMMA                : 52 56 68 73 74 74 81 93
DIFFERENT            : 28
DIVIDE               : 38 155
ELSE                 : 18
EQUAL                : 62
FALSE                : 117
FCONST               : 114
FD                   : 78
FLOAT                : 87
GREATEQUAL           : 30
GREATHAN             : 27
HOME                 : 77
ICONST               : 5 115
ID                   : 3 10 11 62 67 68 83 113
IF                   : 15
INT                  : 86
LBRACE               : 12 13 14 150 151 152
LBRACKET             : 5 84
LESSEQUAL            : 31
LESSTHAN             : 26
LOOP                 : 59
LPAREN               : 2 10 11 15 41 59 67 68 72 73 74 75 76 77 78 79 80 81 82 153
MAIN                 : 2
MINUS                : 34 45
OR                   : 23
PD                   : 75
PLUS                 : 35 46
PRINT                : 72
PU                   : 76
RBRACE               : 12 13 14 150 151 152
RBRACKET             : 5 84
READ                 : 68
RETURN               : 14 152
RPAREN               : 2 10 11 15 41 59 67 68 72 73 74 75 76 77 78 79 80 81 82 153
RT                   : 79
SEMI                 : 3 14 95 152
SQUARE               : 82
STRING               : 55 65 71
TIMES                : 39 156
TRUE                 : 118
TWOEQUAL             : 29
VOID                 : 10
error                : 150 151 152 153 154 155 156

Nonterminals, with rules where they appear

Arc                  : 111
Array                : 3 3
Array1               : 83 83
Assign               : 99
Assign1              : 62
Block                : 15 18 59
Brush                : 101
Call                 : 48 64 100
Check_Char           : 65
Check_Signature      : 67
Circle               : 110
Color                : 73 109
Conditional          : 98
Constant             : 47
Declaration          : 1 3 13 14 151 152
Else                 : 15
Expr                 : 25 26 27 28 29 30 31 34 35
Expr1                : 33
Expression           : 21 154
Expression1          : 25
FBlock               : 2 10
Factor               : 37
Factor1              : 42
Factor2              : 43
Factor3              : 44 45 46
Forward              : 107
Function             : 1 10 11
Function1            : 7
Gen_Quad0            : 45 46
Gen_Quad1            : 37
Gen_Quad2            : 33
Gen_Quad3            : 25
Gen_Quad4            : 21
Gen_Quad5            : 63 65
Generate_Read        : 68
Go_Back_To_Validate  : 59
Home                 : 106
Instruction          : 12 13 14 95
Instruction1         : 95
Loop                 : 97
Main                 : 1
Param                : 92
ParamList            : 10 11
ParamList1           : 90 93
ParamList2           : 92
Params               : 67
Params1              : 49 52
Params2              : 51
Params3              : 56 72
Params4              : 54 55
PenDown              : 104
PenUp                : 105
Pop_Expr             : 41
Pop_Label_Stack      : 18 18 19 59
Pop_Scope            : 10 11
Primitive            : 3 11 70 83
Print                : 103
Program              : 149 0
Push_Else            : 18
Push_Expr            : 41
Push_Label_Stack     : 15 59
Push_Param_List      : 
Push_Scope           : 2 10 11
RFBlock              : 11
RFunction            : 8
Read                 : 102
Rotate               : 108
Save_Label           : 59
Seen_Call            : 67
Seen_Call_End        : 67
Seen_Char            : 116
Seen_Char_Operand    : 65
Seen_Float           : 114
Seen_Function        : 10 11
Seen_Function_End    : 10 11
Seen_Int             : 115
Seen_Main            : 2
Seen_Operand         : 42 62
Seen_Operator        : 22 23 26 27 28 29 30 31 34 35 38 39 62
Seen_Param_Call      : 51
Seen_Param_Print     : 54 55
Seen_Program         : 1
Seen_Program_End     : 1
Seen_Semi            : 95
Seen_Variable        : 3 83
Square               : 112
SuperExpr            : 14 15 22 23 41 51 54 59 63 73 74 74 74 78 79 80 81 81 82 152
SuperExpr1           : 21 154
Term                 : 33 38 39 155 156
Term1                : 37
Type                 : 68
Update_Signature_Size : 83
empty                : 4 6 9 19 24 32 36 40 50 53 57 85 91 94 96

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Seen_Program Declaration Function Main Seen_Program_End
    (149) Program -> . ASCII Program
    (126) Seen_Program -> .

    ASCII           shift and go to state 3
    INT             reduce using rule 126 (Seen_Program -> .)
    FLOAT           reduce using rule 126 (Seen_Program -> .)
    BOOL            reduce using rule 126 (Seen_Program -> .)
    CHAR            reduce using rule 126 (Seen_Program -> .)
    VOID            reduce using rule 126 (Seen_Program -> .)
    MAIN            reduce using rule 126 (Seen_Program -> .)

    Seen_Program                   shift and go to state 1
    Program                        shift and go to state 2

state 1

    (1) Program -> Seen_Program . Declaration Function Main Seen_Program_End
    (3) Declaration -> . Primitive ID Array Array Seen_Variable SEMI Declaration
    (4) Declaration -> . empty
    (86) Primitive -> . INT
    (87) Primitive -> . FLOAT
    (88) Primitive -> . BOOL
    (89) Primitive -> . CHAR
    (148) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    BOOL            shift and go to state 8
    CHAR            shift and go to state 7
    VOID            reduce using rule 148 (empty -> .)
    MAIN            reduce using rule 148 (empty -> .)

  ! INT             [ reduce using rule 148 (empty -> .) ]
  ! FLOAT           [ reduce using rule 148 (empty -> .) ]
  ! BOOL            [ reduce using rule 148 (empty -> .) ]
  ! CHAR            [ reduce using rule 148 (empty -> .) ]

    Primitive                      shift and go to state 6
    Declaration                    shift and go to state 9
    empty                          shift and go to state 10

state 2

    (0) S' -> Program .



state 3

    (149) Program -> ASCII . Program
    (1) Program -> . Seen_Program Declaration Function Main Seen_Program_End
    (149) Program -> . ASCII Program
    (126) Seen_Program -> .

    ASCII           shift and go to state 3
    INT             reduce using rule 126 (Seen_Program -> .)
    FLOAT           reduce using rule 126 (Seen_Program -> .)
    BOOL            reduce using rule 126 (Seen_Program -> .)
    CHAR            reduce using rule 126 (Seen_Program -> .)
    VOID            reduce using rule 126 (Seen_Program -> .)
    MAIN            reduce using rule 126 (Seen_Program -> .)

    Seen_Program                   shift and go to state 1
    Program                        shift and go to state 11

state 4

    (86) Primitive -> INT .

    ID              reduce using rule 86 (Primitive -> INT .)
    COMMA           reduce using rule 86 (Primitive -> INT .)


state 5

    (87) Primitive -> FLOAT .

    ID              reduce using rule 87 (Primitive -> FLOAT .)
    COMMA           reduce using rule 87 (Primitive -> FLOAT .)


state 6

    (3) Declaration -> Primitive . ID Array Array Seen_Variable SEMI Declaration

    ID              shift and go to state 12


state 7

    (89) Primitive -> CHAR .

    ID              reduce using rule 89 (Primitive -> CHAR .)
    COMMA           reduce using rule 89 (Primitive -> CHAR .)


state 8

    (88) Primitive -> BOOL .

    ID              reduce using rule 88 (Primitive -> BOOL .)
    COMMA           reduce using rule 88 (Primitive -> BOOL .)


state 9

    (1) Program -> Seen_Program Declaration . Function Main Seen_Program_End
    (7) Function -> . Function1
    (8) Function -> . RFunction
    (9) Function -> . empty
    (10) Function1 -> . VOID ID Push_Scope LPAREN ParamList RPAREN Seen_Function FBlock Seen_Function_End Pop_Scope Function
    (11) RFunction -> . Primitive ID Push_Scope LPAREN ParamList RPAREN Seen_Function RFBlock Seen_Function_End Pop_Scope Function
    (148) empty -> .
    (86) Primitive -> . INT
    (87) Primitive -> . FLOAT
    (88) Primitive -> . BOOL
    (89) Primitive -> . CHAR

    VOID            shift and go to state 13
    MAIN            reduce using rule 148 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    BOOL            shift and go to state 8
    CHAR            shift and go to state 7

    Function                       shift and go to state 17
    RFunction                      shift and go to state 14
    Function1                      shift and go to state 16
    Primitive                      shift and go to state 18
    empty                          shift and go to state 15

state 10

    (4) Declaration -> empty .

    VOID            reduce using rule 4 (Declaration -> empty .)
    INT             reduce using rule 4 (Declaration -> empty .)
    FLOAT           reduce using rule 4 (Declaration -> empty .)
    BOOL            reduce using rule 4 (Declaration -> empty .)
    CHAR            reduce using rule 4 (Declaration -> empty .)
    MAIN            reduce using rule 4 (Declaration -> empty .)
    error           reduce using rule 4 (Declaration -> empty .)
    LOOP            reduce using rule 4 (Declaration -> empty .)
    IF              reduce using rule 4 (Declaration -> empty .)
    ID              reduce using rule 4 (Declaration -> empty .)
    BRUSH           reduce using rule 4 (Declaration -> empty .)
    READ            reduce using rule 4 (Declaration -> empty .)
    PRINT           reduce using rule 4 (Declaration -> empty .)
    PD              reduce using rule 4 (Declaration -> empty .)
    PU              reduce using rule 4 (Declaration -> empty .)
    HOME            reduce using rule 4 (Declaration -> empty .)
    FD              reduce using rule 4 (Declaration -> empty .)
    RT              reduce using rule 4 (Declaration -> empty .)
    COLOR           reduce using rule 4 (Declaration -> empty .)
    CIRCLE          reduce using rule 4 (Declaration -> empty .)
    ARC             reduce using rule 4 (Declaration -> empty .)
    SQUARE          reduce using rule 4 (Declaration -> empty .)
    RBRACE          reduce using rule 4 (Declaration -> empty .)
    RETURN          reduce using rule 4 (Declaration -> empty .)


state 11

    (149) Program -> ASCII Program .

    $end            reduce using rule 149 (Program -> ASCII Program .)


state 12

    (3) Declaration -> Primitive ID . Array Array Seen_Variable SEMI Declaration
    (5) Array -> . LBRACKET ICONST RBRACKET
    (6) Array -> . empty
    (148) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 19
    SEMI            reduce using rule 148 (empty -> .)

  ! LBRACKET        [ reduce using rule 148 (empty -> .) ]

    Array                          shift and go to state 20
    empty                          shift and go to state 21

state 13

    (10) Function1 -> VOID . ID Push_Scope LPAREN ParamList RPAREN Seen_Function FBlock Seen_Function_End Pop_Scope Function

    ID              shift and go to state 22


state 14

    (8) Function -> RFunction .

    MAIN            reduce using rule 8 (Function -> RFunction .)


state 15

    (9) Function -> empty .

    MAIN            reduce using rule 9 (Function -> empty .)


state 16

    (7) Function -> Function1 .

    MAIN            reduce using rule 7 (Function -> Function1 .)


state 17

    (1) Program -> Seen_Program Declaration Function . Main Seen_Program_End
    (2) Main -> . MAIN Push_Scope Seen_Main LPAREN RPAREN FBlock

    MAIN            shift and go to state 23

    Main                           shift and go to state 24

state 18

    (11) RFunction -> Primitive . ID Push_Scope LPAREN ParamList RPAREN Seen_Function RFBlock Seen_Function_End Pop_Scope Function

    ID              shift and go to state 25


state 19

    (5) Array -> LBRACKET . ICONST RBRACKET

    ICONST          shift and go to state 26


state 20

    (3) Declaration -> Primitive ID Array . Array Seen_Variable SEMI Declaration
    (5) Array -> . LBRACKET ICONST RBRACKET
    (6) Array -> . empty
    (148) empty -> .

    LBRACKET        shift and go to state 19
    SEMI            reduce using rule 148 (empty -> .)

    Array                          shift and go to state 27
    empty                          shift and go to state 21

state 21

    (6) Array -> empty .

    LBRACKET        reduce using rule 6 (Array -> empty .)
    SEMI            reduce using rule 6 (Array -> empty .)


state 22

    (10) Function1 -> VOID ID . Push_Scope LPAREN ParamList RPAREN Seen_Function FBlock Seen_Function_End Pop_Scope Function
    (146) Push_Scope -> .

    LPAREN          reduce using rule 146 (Push_Scope -> .)

    Push_Scope                     shift and go to state 28

state 23

    (2) Main -> MAIN . Push_Scope Seen_Main LPAREN RPAREN FBlock
    (146) Push_Scope -> .

    LPAREN          reduce using rule 146 (Push_Scope -> .)

    Push_Scope                     shift and go to state 29

state 24

    (1) Program -> Seen_Program Declaration Function Main . Seen_Program_End
    (127) Seen_Program_End -> .

    $end            reduce using rule 127 (Seen_Program_End -> .)

    Seen_Program_End               shift and go to state 30

state 25

    (11) RFunction -> Primitive ID . Push_Scope LPAREN ParamList RPAREN Seen_Function RFBlock Seen_Function_End Pop_Scope Function
    (146) Push_Scope -> .

    LPAREN          reduce using rule 146 (Push_Scope -> .)

    Push_Scope                     shift and go to state 31

state 26

    (5) Array -> LBRACKET ICONST . RBRACKET

    RBRACKET        shift and go to state 32


state 27

    (3) Declaration -> Primitive ID Array Array . Seen_Variable SEMI Declaration
    (141) Seen_Variable -> .

    SEMI            reduce using rule 141 (Seen_Variable -> .)

    Seen_Variable                  shift and go to state 33

state 28

    (10) Function1 -> VOID ID Push_Scope . LPAREN ParamList RPAREN Seen_Function FBlock Seen_Function_End Pop_Scope Function

    LPAREN          shift and go to state 34


state 29

    (2) Main -> MAIN Push_Scope . Seen_Main LPAREN RPAREN FBlock
    (128) Seen_Main -> .

    LPAREN          reduce using rule 128 (Seen_Main -> .)

    Seen_Main                      shift and go to state 35

state 30

    (1) Program -> Seen_Program Declaration Function Main Seen_Program_End .

    $end            reduce using rule 1 (Program -> Seen_Program Declaration Function Main Seen_Program_End .)


state 31

    (11) RFunction -> Primitive ID Push_Scope . LPAREN ParamList RPAREN Seen_Function RFBlock Seen_Function_End Pop_Scope Function

    LPAREN          shift and go to state 36


state 32

    (5) Array -> LBRACKET ICONST RBRACKET .

    LBRACKET        reduce using rule 5 (Array -> LBRACKET ICONST RBRACKET .)
    SEMI            reduce using rule 5 (Array -> LBRACKET ICONST RBRACKET .)


state 33

    (3) Declaration -> Primitive ID Array Array Seen_Variable . SEMI Declaration

    SEMI            shift and go to state 37


state 34

    (10) Function1 -> VOID ID Push_Scope LPAREN . ParamList RPAREN Seen_Function FBlock Seen_Function_End Pop_Scope Function
    (90) ParamList -> . ParamList1
    (91) ParamList -> . empty
    (92) ParamList1 -> . Param ParamList2
    (148) empty -> .
    (83) Param -> . Primitive ID Array1 Array1 Seen_Variable Update_Signature_Size
    (86) Primitive -> . INT
    (87) Primitive -> . FLOAT
    (88) Primitive -> . BOOL
    (89) Primitive -> . CHAR

    RPAREN          reduce using rule 148 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    BOOL            shift and go to state 8
    CHAR            shift and go to state 7

    Primitive                      shift and go to state 40
    ParamList1                     shift and go to state 41
    Param                          shift and go to state 39
    ParamList                      shift and go to state 38
    empty                          shift and go to state 42

state 35

    (2) Main -> MAIN Push_Scope Seen_Main . LPAREN RPAREN FBlock

    LPAREN          shift and go to state 43


state 36

    (11) RFunction -> Primitive ID Push_Scope LPAREN . ParamList RPAREN Seen_Function RFBlock Seen_Function_End Pop_Scope Function
    (90) ParamList -> . ParamList1
    (91) ParamList -> . empty
    (92) ParamList1 -> . Param ParamList2
    (148) empty -> .
    (83) Param -> . Primitive ID Array1 Array1 Seen_Variable Update_Signature_Size
    (86) Primitive -> . INT
    (87) Primitive -> . FLOAT
    (88) Primitive -> . BOOL
    (89) Primitive -> . CHAR

    RPAREN          reduce using rule 148 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    BOOL            shift and go to state 8
    CHAR            shift and go to state 7

    Primitive                      shift and go to state 40
    ParamList1                     shift and go to state 41
    Param                          shift and go to state 39
    ParamList                      shift and go to state 44
    empty                          shift and go to state 42

state 37

    (3) Declaration -> Primitive ID Array Array Seen_Variable SEMI . Declaration
    (3) Declaration -> . Primitive ID Array Array Seen_Variable SEMI Declaration
    (4) Declaration -> . empty
    (86) Primitive -> . INT
    (87) Primitive -> . FLOAT
    (88) Primitive -> . BOOL
    (89) Primitive -> . CHAR
    (148) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    BOOL            shift and go to state 8
    CHAR            shift and go to state 7
    VOID            reduce using rule 148 (empty -> .)
    MAIN            reduce using rule 148 (empty -> .)
    error           reduce using rule 148 (empty -> .)
    LOOP            reduce using rule 148 (empty -> .)
    IF              reduce using rule 148 (empty -> .)
    ID              reduce using rule 148 (empty -> .)
    BRUSH           reduce using rule 148 (empty -> .)
    READ            reduce using rule 148 (empty -> .)
    PRINT           reduce using rule 148 (empty -> .)
    PD              reduce using rule 148 (empty -> .)
    PU              reduce using rule 148 (empty -> .)
    HOME            reduce using rule 148 (empty -> .)
    FD              reduce using rule 148 (empty -> .)
    RT              reduce using rule 148 (empty -> .)
    COLOR           reduce using rule 148 (empty -> .)
    CIRCLE          reduce using rule 148 (empty -> .)
    ARC             reduce using rule 148 (empty -> .)
    SQUARE          reduce using rule 148 (empty -> .)
    RBRACE          reduce using rule 148 (empty -> .)
    RETURN          reduce using rule 148 (empty -> .)

  ! INT             [ reduce using rule 148 (empty -> .) ]
  ! FLOAT           [ reduce using rule 148 (empty -> .) ]
  ! BOOL            [ reduce using rule 148 (empty -> .) ]
  ! CHAR            [ reduce using rule 148 (empty -> .) ]

    Primitive                      shift and go to state 6
    Declaration                    shift and go to state 45
    empty                          shift and go to state 10

state 38

    (10) Function1 -> VOID ID Push_Scope LPAREN ParamList . RPAREN Seen_Function FBlock Seen_Function_End Pop_Scope Function

    RPAREN          shift and go to state 46


state 39

    (92) ParamList1 -> Param . ParamList2
    (93) ParamList2 -> . COMMA ParamList1
    (94) ParamList2 -> . empty
    (148) empty -> .

    COMMA           shift and go to state 48
    RPAREN          reduce using rule 148 (empty -> .)

    empty                          shift and go to state 47
    ParamList2                     shift and go to state 49

state 40

    (83) Param -> Primitive . ID Array1 Array1 Seen_Variable Update_Signature_Size

    ID              shift and go to state 50


state 41

    (90) ParamList -> ParamList1 .

    RPAREN          reduce using rule 90 (ParamList -> ParamList1 .)


state 42

    (91) ParamList -> empty .

    RPAREN          reduce using rule 91 (ParamList -> empty .)


state 43

    (2) Main -> MAIN Push_Scope Seen_Main LPAREN . RPAREN FBlock

    RPAREN          shift and go to state 51


state 44

    (11) RFunction -> Primitive ID Push_Scope LPAREN ParamList . RPAREN Seen_Function RFBlock Seen_Function_End Pop_Scope Function

    RPAREN          shift and go to state 52


state 45

    (3) Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .

    VOID            reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    INT             reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    FLOAT           reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    BOOL            reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    CHAR            reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    MAIN            reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    error           reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    LOOP            reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    IF              reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    ID              reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    BRUSH           reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    READ            reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    PRINT           reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    PD              reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    PU              reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    HOME            reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    FD              reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    RT              reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    COLOR           reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    CIRCLE          reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    ARC             reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    SQUARE          reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    RBRACE          reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)
    RETURN          reduce using rule 3 (Declaration -> Primitive ID Array Array Seen_Variable SEMI Declaration .)


state 46

    (10) Function1 -> VOID ID Push_Scope LPAREN ParamList RPAREN . Seen_Function FBlock Seen_Function_End Pop_Scope Function
    (124) Seen_Function -> .

    LBRACE          reduce using rule 124 (Seen_Function -> .)

    Seen_Function                  shift and go to state 53

state 47

    (94) ParamList2 -> empty .

    RPAREN          reduce using rule 94 (ParamList2 -> empty .)


state 48

    (93) ParamList2 -> COMMA . ParamList1
    (92) ParamList1 -> . Param ParamList2
    (83) Param -> . Primitive ID Array1 Array1 Seen_Variable Update_Signature_Size
    (86) Primitive -> . INT
    (87) Primitive -> . FLOAT
    (88) Primitive -> . BOOL
    (89) Primitive -> . CHAR

    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    BOOL            shift and go to state 8
    CHAR            shift and go to state 7

    Primitive                      shift and go to state 40
    ParamList1                     shift and go to state 54
    Param                          shift and go to state 39

state 49

    (92) ParamList1 -> Param ParamList2 .

    RPAREN          reduce using rule 92 (ParamList1 -> Param ParamList2 .)


state 50

    (83) Param -> Primitive ID . Array1 Array1 Seen_Variable Update_Signature_Size
    (84) Array1 -> . LBRACKET RBRACKET
    (85) Array1 -> . empty
    (148) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 56
    COMMA           reduce using rule 148 (empty -> .)
    RPAREN          reduce using rule 148 (empty -> .)

  ! LBRACKET        [ reduce using rule 148 (empty -> .) ]

    Array1                         shift and go to state 55
    empty                          shift and go to state 57

state 51

    (2) Main -> MAIN Push_Scope Seen_Main LPAREN RPAREN . FBlock
    (13) FBlock -> . LBRACE Declaration Instruction RBRACE
    (151) FBlock -> . LBRACE Declaration error RBRACE

    LBRACE          shift and go to state 58

    FBlock                         shift and go to state 59

state 52

    (11) RFunction -> Primitive ID Push_Scope LPAREN ParamList RPAREN . Seen_Function RFBlock Seen_Function_End Pop_Scope Function
    (124) Seen_Function -> .

    LBRACE          reduce using rule 124 (Seen_Function -> .)

    Seen_Function                  shift and go to state 60

state 53
